# verified-storage

./: .gitignore  CMakeLists.txt  README.md  patricia-merkle-trie.cpp
docs/: DB_README.md  Nibble_README.md
keccak/: CMakeLists.txt
keccak/src/keccak/: keccak_buffer.hpp
main/: CMakeLists.txt  main.cpp
old/constants/: alias.hpp  constants.hpp  enums.hpp  nodetype.hpp
old/src/: CMakeLists.txt
old/src/core/: alias.hpp  branch.cpp  branch.hpp  db.hpp  extension.cpp  leaf.cpp  path.hpp  vtrie.cpp  vtrie.hpp
old/src/keccak/: keccak_buffer.cpp  keccak_buffer.hpp
old/src/rlp/: CMakeLists.txt  nodeutils.hpp  rlpdecode.cpp  rlpencode.cpp  utils.cpp
old/src/rlp/inc/: template_utils.hpp
old/src/utils/: generalised.hpp  hex.cpp  hex.hpp  nibbles.cpp  nibbles.hpp
persistent/: CMakeLists.txt
persistent/src/persistent/: enums.hpp
rlp/: CMakeLists.txt
rlp/src/rlp/codec/: rlpdecode.cpp  rlpdecode.hpp  rlpencode.cpp  rlpencode.hpp
rlp/src/rlp/items/: rlplist.cpp  rlplist.hpp  rlpstring.hpp
src/: Branch.cpp  Branch.hpp  CMakeLists.txt  Extension.cpp  Extension.hpp  Leaf.cpp  Leaf.hpp  Node.cpp  Node.hpp  NodeType.hpp  Tree.cpp  VTrie.cpp  VTrie.hpp  batchdbop.cpp  branch.cpp  db.cpp  extension.cpp  hex.cpp  leaf.cpp  nibbles.cpp  node.cpp  nodeutils.cpp  path.cpp  patricia-merkle-trie.cpp  vtrie.cpp
src/core/: alias.hpp  aliasadvance.hpp  batchdbop.hpp  branch.cpp  branch.hpp  constants.hpp  db.cpp  db.hpp  extension.cpp  extension.hpp  node.cpp  node.hpp  nodetype.hpp  nodeutils.cpp  nodeutils.hpp  path.cpp  path.hpp  vtrie.cpp  vtrie.hpp
src/inc/: alias.hpp  batchdbop.hpp  branch.hpp  constants.inc  db.hpp  extension.hpp  foundnode.h  foundnode.hpp  leaf.hpp  node.hpp  nodetype.hpp  nodeutils.hpp  path.hpp  vtrie.hpp
src/includes/: CMakeLists.txt  batchdbop.hpp  branch.hpp  db.hpp  foundnode.hpp  leaf.hpp  nodetype.hpp  nodeutils.hpp
src/keccak/: CMakeLists.txt  keccak_buffer.hpp
src/old/: NodeType.hpp  Tree.hpp
src/rlp/: rlpdecode.cpp  utils.cpp
src/rlp/inc/: CMakeLists.txt  rlpdecode.hpp  rlpencode.hpp  template_utils.hpp  utils.hpp
src/utils/: CMakeLists.txt  generalised.hpp  hex.cpp  hex.hpp  nibbles.cpp  nibbles.hpp
storage/: CMakeLists.txt
storage/src/storage/core/: vtrie.cpp  vtrie.hpp
storage/src/storage/db/: db.cpp
storage/src/storage/nodes/: branch.cpp  branch.hpp  extension.cpp  extension.hpp  leaf.cpp  leaf.hpp  node.cpp  node.hpp
storage/src/storage/utils/: aliasadvance.hpp  batchdbop.hpp  foundnode.hpp  nodeutils.cpp  nodeutils.hpp  path.hpp
utils/: CMakeLists.txt
utils/src/utils/: generalised.hpp  hex.cpp  hex.hpp  nibbles.cpp  nibbles.hpp
